<resources>
    <string name="app_name">AppMy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="NossaEquipe">Nossa Equipe</string>
    <string name="Map">Mapa</string>
    <string name="Sobre">Sobre nos</string>
    <string name="Contato">Contato</string>
    <string name="Nossapagina">Nossa Pagina</string>
    S
    <string name="Sobrenos">Sobre Nos</string>
    <string name="textosobrenos">A maioria das pessoas são movidas por sonhos e desejos. Em muitos casos a vontade de conquistar algo maior se torna o melhor combustível para que os indivíduos continuem caminhando e superando todos os desafios que surgem ao longo da jornada.</string>
    <string name="voltar">voltar</string>
    <string name="logo">logo</string>
    <string name="arlandia">Arlandia</string>
    <string name="email">lanny.cardoso@hotmail.com</string>
    <string name="title_activity_mapa">Map</string>
</resources>
